--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </div>
 
   <div class="posts-list row">
-    <div class="card mt-4 col-md-6 bg-light">
+    <!-- <div class="card mt-4 col-md-6 bg-light">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
@@ -37,7 +37,7 @@
         <a href="#" class="card-link">Edit</a>
         <a href="#" class="card-link">Delete</a>
       </div>
-    </div>
+    </div> -->
   </div>
 
 
