--- a/index.html
+++ b/index.html
@@ -15,29 +15,21 @@
   <div class="row mt-3">
       <div class="col-md-6">
         <h3>Add new post</h3>
-        <form>
+        <form class="add-post-form">
           <div class="mb-3">
             <label for="title">Title</label>
             <input type="text" class="form-control" id="title-value">
           </div>
           <div class="mb-3">
             <label for="body">Content</label>
-            <textarea class="form-control" id="body" rows="5"></textarea>
+            <textarea class="form-control" id="description-value" rows="5"></textarea>
           </div>
           <button type="submit" class="btn btn-primary">Submit</button>
         </form>
   </div>
 
   <div class="posts-list row">
-    <!-- <div class="card mt-4 col-md-6 bg-light">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="card-link">Edit</a>
-        <a href="#" class="card-link">Delete</a>
-      </div>
-    </div> -->
+
   </div>
 
 
